--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
 html {
   height: 100%;
+  width: 100%;
 }
 
 body {
-  height: inhert;
+  height: inherit;
+  width: inherit;
   margin: 0;
   padding: 0;
 }
 
 #root {
   height: inherit;
+  width: inherit;
 }
