--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -7,6 +7,8 @@
 
 .editor {
   height: 100%;
+  max-width: calc(100vw - 375px - 260px);
+  overflow: auto;
 }
 
 //
